syntax = "proto3";
option go_package = "./pb";

package pb;

import "models/rpc_messages.proto";

// 系统设置管理服务
service SysSettingService {
	// 更改配置
	rpc updateSysSetting (UpdateSysSettingRequest) returns (RPCSuccess);

	// 读取配置
	rpc readSysSetting (ReadSysSettingRequest) returns (ReadSysSettingResponse);
}

// 更改配置
message UpdateSysSettingRequest {
	string code = 1;
	bytes valueJSON = 2;
}

// 读取配置
message ReadSysSettingRequest {
	string code = 1;
}

message ReadSysSettingResponse {
	bytes valueJSON = 1;
}